[project]
name = "image-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pre-commit>=4.3.0",
    "pyqt6>=6.9.1",
    "pytest>=8.4.2",
]

[tool.isort]
line_length = 80
profile = "black"
